// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changed and not published 1`] = `
<div
  className="publish-toolbar"
>
  <div
    className="info-content"
  >
    <div
      className="info-msg"
    >
      Last change you've made hasn't published
    </div>
    <div
      className="info-controls"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Publish
      </button>
    </div>
  </div>
</div>
`;

exports[`changed and publishing 1`] = `
<div
  className="publish-toolbar"
>
  <div
    className="info-content"
  >
    <div
      className="info-msg"
    >
      Last change you've made hasn't published
    </div>
    <div
      className="info-controls"
    >
      <button
        className="btn btn-primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Publish
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`first publishing 1`] = `
<div
  className="publish-toolbar"
>
  <div
    className="info-content"
  >
    <div
      className="info-msg"
    >
      Your Lander page hasn't published yet
    </div>
    <div
      className="info-controls"
    >
      <button
        className="btn btn-primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Publish
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`not published 1`] = `
<div
  className="publish-toolbar"
>
  <div
    className="info-content"
  >
    <div
      className="info-msg"
    >
      Your Lander page hasn't published yet
    </div>
    <div
      className="info-controls"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Publish
      </button>
    </div>
  </div>
</div>
`;

exports[`up to date 1`] = `
<div
  className="publish-toolbar"
>
  <span
    className="btn-qr"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3,11H5V13H3V11M11,5H13V9H11V5M9,11H13V15H11V13H9V11M15,11H17V13H19V11H21V13H19V15H21V19H19V21H17V19H13V21H11V17H15V15H17V13H15V11M19,19V15H17V19H19M15,3H21V9H15V3M17,5V7H19V5H17M3,3H9V9H3V3M5,5V7H7V5H5M3,15H9V21H3V15M5,17V19H7V17H5Z"
      />
    </svg>
  </span>
  <a
    className="user-address"
    href="http://localhost/lorem"
  >
    http://localhost/lorem
  </a>
  <span
    className="btn-edit-alias"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-pen fa-w-16"
      data-icon="pen"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;
